Completed data inspection, data visualization - identifying the associations between MPG and other independent variables, fitted the multivariate linear regression model, computed RMSPE, RSquared

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -664,14 +664,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: (294, 8)\n",
-      "Testing set size: (98, 8)\n"
+      "Training set size: (294, 6)\n",
+      "Testing set size: (98, 6)\n"
      ]
     }
    ],
    "source": [
     "# define predictors (X) and response variable (y)\n",
-    "X = mpg_data.drop(columns=['mpg'])  \n",
+    "X = mpg_data.drop(columns=['mpg']).select_dtypes(include=[float, int])\n",
     "y = mpg_data['mpg']  \n",
     "\n",
     "X_train_dataset, X_test_dataset, y_train, y_test = train_test_split(X, y, \n",
@@ -682,7 +682,7 @@
     "\n",
     "# print the sizes of the splitted data set\n",
     "print(\"Training set size:\", X_train_dataset.shape)\n",
-    "print(\"Testing set size:\", X_test_dataset.shape)\n"
+    "print(\"Testing set size:\", X_test_dataset.shape)"
    ]
   },
   {
@@ -695,19 +695,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "ac1e1117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      predictor     slope  intercept\n",
+      "0     cylinders -0.160143 -15.047371\n",
+      "1  displacement  0.000373 -15.047371\n",
+      "2    horsepower -0.001899 -15.047371\n",
+      "3        weight -0.006457 -15.047371\n",
+      "4  acceleration  0.057588 -15.047371\n",
+      "5    model_year  0.762270 -15.047371\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here ...\n",
+    "# Initialize the Linear Regression model\n",
+    "lm = LinearRegression()\n",
     "\n",
-    "numeric_predictors = 🤷‍♂️\n",
+    "# Fit the model using the training data\n",
+    "lm.fit(X_train_dataset, y_train)\n",
     "\n",
+    "numeric_predictors = X_train_dataset.columns\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
     "coefficients_df = pd.DataFrame({\n",
-    "    \"predictor\": numeric_predictors.columns,\n",
+    "    \"predictor\": numeric_predictors,\n",
     "    \"slope\": lm.coef_,\n",
     "    \"intercept\": [lm.intercept_] * len(lm.coef_)\n",
     "})\n",
@@ -733,12 +750,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Root Mean Squared Prediction Error is 3.1855\n",
+      "The R square value is 0.7988\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here ..."
+    "# Predict using the test data set\n",
+    "y_test_pred = lm.predict(X_test_dataset)\n",
+    "\n",
+    "# Calculate RMSPE for the multivariable model to indicate the average percentage error\n",
+    "# between predicted and actual values\n",
+    "lm_model_RMSPE = mean_squared_error(y_test, y_test_pred) ** 0.5\n",
+    "print(f\"The Root Mean Squared Prediction Error is {lm_model_RMSPE:.5}\")\n",
+    "\n",
+    "# Calculate R square value to see how well the regression model fits in the given data \n",
+    "lm_model_rsquare = r2_score(y_test, y_test_pred)\n",
+    "print(f\"The R square value is {lm_model_rsquare:.5}\")"
    ]
   },
   {
